10_final/python/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GENERATE_RAYFILES
    LIGHT
    TEXTURE
    SAVE_COORDS
    SHADING_TYPE
    CAMERA
    SHADING
    FOCAL
    WEB
    CO
    SAVE_KNOBS
    TWEEN
    MESH
    AMBIENT
    CONSTANTS

Grammar

Rule 0     S' -> stuff
Rule 1     stuff -> <empty>
Rule 2     stuff -> statement stuff
Rule 3     statement -> COMMENT
Rule 4     statement -> POP
Rule 5     statement -> PUSH
Rule 6     statement -> SCREEN INT INT
Rule 7     statement -> SCREEN
Rule 8     statement -> SAVE
Rule 9     statement -> SAVE TEXT
Rule 10    statement -> DISPLAY TEXT
Rule 11    statement -> DISPLAY
Rule 12    statement -> SET SYMBOL NUMBER
Rule 13    statement -> SET_KNOBS NUMBER
Rule 14    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
Rule 15    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
Rule 17    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 18    statement -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 19    statement -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 21    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 22    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 23    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 25    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    statement -> BASENAME TEXT
Rule 27    statement -> FRAMES INT
Rule 28    statement -> VARY SYMBOL INT INT NUMBER NUMBER
Rule 29    statement -> VARY SYMBOL INT INT FUNCTION
Rule 30    statement -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 31    statement -> MOVE NUMBER NUMBER NUMBER
Rule 32    statement -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 33    statement -> SCALE NUMBER NUMBER NUMBER
Rule 34    statement -> ROTATE XYZ NUMBER SYMBOL
Rule 35    statement -> ROTATE XYZ NUMBER
Rule 36    SYMBOL -> XYZ
Rule 37    SYMBOL -> ID
Rule 38    TEXT -> SYMBOL
Rule 39    TEXT -> STRING
Rule 40    NUMBER -> DOUBLE
Rule 41    NUMBER -> INT

Terminals, with rules where they appear

AMBIENT              : 
BASENAME             : 26
BEZIER               : 22 23
BOX                  : 18
CAMERA               : 
CIRCLE               : 20 21
CO                   : 
COMMENT              : 3
CONSTANTS            : 
DISPLAY              : 10 11
DOUBLE               : 40
FOCAL                : 
FRAMES               : 27
FUNCTION             : 29
GENERATE_RAYFILES    : 
HERMITE              : 24 25
ID                   : 37
INT                  : 6 6 14 14 16 16 21 22 24 27 28 28 29 29 41
LIGHT                : 
LINE                 : 19
MESH                 : 
MOVE                 : 30 31
POP                  : 4
PUSH                 : 5
ROTATE               : 34 35
SAVE                 : 8 9
SAVE_COORDS          : 
SAVE_KNOBS           : 
SCALE                : 32 33
SCREEN               : 6 7
SET                  : 12
SET_KNOBS            : 13
SHADING              : 
SHADING_TYPE         : 
SPHERE               : 14 15
STRING               : 39
TEXTURE              : 
TORUS                : 16 17
TWEEN                : 
VARY                 : 28 29
WEB                  : 
XYZ                  : 34 35 36
error                : 

Nonterminals, with rules where they appear

NUMBER               : 12 13 14 14 14 14 15 15 15 15 16 16 16 16 16 17 17 17 17 17 18 18 18 18 18 18 19 19 19 19 19 19 20 20 20 20 20 20 20 21 21 21 21 21 21 21 22 22 22 22 22 22 22 22 22 22 22 22 23 23 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 25 25 25 28 28 30 30 30 31 31 31 32 32 32 33 33 33 34 35
SYMBOL               : 12 28 29 30 32 34 38
TEXT                 : 9 10 26
statement            : 2
stuff                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . POP
    (5) statement -> . PUSH
    (6) statement -> . SCREEN INT INT
    (7) statement -> . SCREEN
    (8) statement -> . SAVE
    (9) statement -> . SAVE TEXT
    (10) statement -> . DISPLAY TEXT
    (11) statement -> . DISPLAY
    (12) statement -> . SET SYMBOL NUMBER
    (13) statement -> . SET_KNOBS NUMBER
    (14) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (15) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (17) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (18) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (22) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (23) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) statement -> . BASENAME TEXT
    (27) statement -> . FRAMES INT
    (28) statement -> . VARY SYMBOL INT INT NUMBER NUMBER
    (29) statement -> . VARY SYMBOL INT INT FUNCTION
    (30) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (31) statement -> . MOVE NUMBER NUMBER NUMBER
    (32) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> . SCALE NUMBER NUMBER NUMBER
    (34) statement -> . ROTATE XYZ NUMBER SYMBOL
    (35) statement -> . ROTATE XYZ NUMBER

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 9
    POP             shift and go to state 12
    PUSH            shift and go to state 15
    SCREEN          shift and go to state 17
    SAVE            shift and go to state 23
    DISPLAY         shift and go to state 7
    SET             shift and go to state 10
    SET_KNOBS       shift and go to state 13
    SPHERE          shift and go to state 18
    TORUS           shift and go to state 16
    BOX             shift and go to state 1
    LINE            shift and go to state 6
    CIRCLE          shift and go to state 22
    BEZIER          shift and go to state 20
    HERMITE         shift and go to state 11
    BASENAME        shift and go to state 8
    FRAMES          shift and go to state 5
    VARY            shift and go to state 4
    MOVE            shift and go to state 3
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 19

    stuff                          shift and go to state 21
    statement                      shift and go to state 14

state 1

    (18) statement -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) NUMBER -> . DOUBLE
    (41) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 26

state 2

    (32) statement -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (33) statement -> SCALE . NUMBER NUMBER NUMBER
    (40) NUMBER -> . DOUBLE
    (41) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 27

state 3

    (30) statement -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (31) statement -> MOVE . NUMBER NUMBER NUMBER
    (40) NUMBER -> . DOUBLE
    (41) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 28

state 4

    (28) statement -> VARY . SYMBOL INT INT NUMBER NUMBER
    (29) statement -> VARY . SYMBOL INT INT FUNCTION
    (36) SYMBOL -> . XYZ
    (37) SYMBOL -> . ID

    XYZ             shift and go to state 31
    ID              shift and go to state 30

    SYMBOL                         shift and go to state 29

state 5

    (27) statement -> FRAMES . INT

    INT             shift and go to state 32


state 6

    (19) statement -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) NUMBER -> . DOUBLE
    (41) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 33

state 7

    (10) statement -> DISPLAY . TEXT
    (11) statement -> DISPLAY .
    (38) TEXT -> . SYMBOL
    (39) TEXT -> . STRING
    (36) SYMBOL -> . XYZ
    (37) SYMBOL -> . ID

    COMMENT         reduce using rule 11 (statement -> DISPLAY .)
    POP             reduce using rule 11 (statement -> DISPLAY .)
    PUSH            reduce using rule 11 (statement -> DISPLAY .)
    SCREEN          reduce using rule 11 (statement -> DISPLAY .)
    SAVE            reduce using rule 11 (statement -> DISPLAY .)
    DISPLAY         reduce using rule 11 (statement -> DISPLAY .)
    SET             reduce using rule 11 (statement -> DISPLAY .)
    SET_KNOBS       reduce using rule 11 (statement -> DISPLAY .)
    SPHERE          reduce using rule 11 (statement -> DISPLAY .)
    TORUS           reduce using rule 11 (statement -> DISPLAY .)
    BOX             reduce using rule 11 (statement -> DISPLAY .)
    LINE            reduce using rule 11 (statement -> DISPLAY .)
    CIRCLE          reduce using rule 11 (statement -> DISPLAY .)
    BEZIER          reduce using rule 11 (statement -> DISPLAY .)
    HERMITE         reduce using rule 11 (statement -> DISPLAY .)
    BASENAME        reduce using rule 11 (statement -> DISPLAY .)
    FRAMES          reduce using rule 11 (statement -> DISPLAY .)
    VARY            reduce using rule 11 (statement -> DISPLAY .)
    MOVE            reduce using rule 11 (statement -> DISPLAY .)
    SCALE           reduce using rule 11 (statement -> DISPLAY .)
    ROTATE          reduce using rule 11 (statement -> DISPLAY .)
    $end            reduce using rule 11 (statement -> DISPLAY .)
    STRING          shift and go to state 34
    XYZ             shift and go to state 31
    ID              shift and go to state 30

    TEXT                           shift and go to state 35
    SYMBOL                         shift and go to state 36

state 8

    (26) statement -> BASENAME . TEXT
    (38) TEXT -> . SYMBOL
    (39) TEXT -> . STRING
    (36) SYMBOL -> . XYZ
    (37) SYMBOL -> . ID

    STRING          shift and go to state 34
    XYZ             shift and go to state 31
    ID              shift and go to state 30

    TEXT                           shift and go to state 37
    SYMBOL                         shift and go to state 36

state 9

    (3) statement -> COMMENT .

    COMMENT         reduce using rule 3 (statement -> COMMENT .)
    POP             reduce using rule 3 (statement -> COMMENT .)
    PUSH            reduce using rule 3 (statement -> COMMENT .)
    SCREEN          reduce using rule 3 (statement -> COMMENT .)
    SAVE            reduce using rule 3 (statement -> COMMENT .)
    DISPLAY         reduce using rule 3 (statement -> COMMENT .)
    SET             reduce using rule 3 (statement -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (statement -> COMMENT .)
    SPHERE          reduce using rule 3 (statement -> COMMENT .)
    TORUS           reduce using rule 3 (statement -> COMMENT .)
    BOX             reduce using rule 3 (statement -> COMMENT .)
    LINE            reduce using rule 3 (statement -> COMMENT .)
    CIRCLE          reduce using rule 3 (statement -> COMMENT .)
    BEZIER          reduce using rule 3 (statement -> COMMENT .)
    HERMITE         reduce using rule 3 (statement -> COMMENT .)
    BASENAME        reduce using rule 3 (statement -> COMMENT .)
    FRAMES          reduce using rule 3 (statement -> COMMENT .)
    VARY            reduce using rule 3 (statement -> COMMENT .)
    MOVE            reduce using rule 3 (statement -> COMMENT .)
    SCALE           reduce using rule 3 (statement -> COMMENT .)
    ROTATE          reduce using rule 3 (statement -> COMMENT .)
    $end            reduce using rule 3 (statement -> COMMENT .)


state 10

    (12) statement -> SET . SYMBOL NUMBER
    (36) SYMBOL -> . XYZ
    (37) SYMBOL -> . ID

    XYZ             shift and go to state 31
    ID              shift and go to state 30

    SYMBOL                         shift and go to state 38

state 11

    (24) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) NUMBER -> . DOUBLE
    (41) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 39

state 12

    (4) statement -> POP .

    COMMENT         reduce using rule 4 (statement -> POP .)
    POP             reduce using rule 4 (statement -> POP .)
    PUSH            reduce using rule 4 (statement -> POP .)
    SCREEN          reduce using rule 4 (statement -> POP .)
    SAVE            reduce using rule 4 (statement -> POP .)
    DISPLAY         reduce using rule 4 (statement -> POP .)
    SET             reduce using rule 4 (statement -> POP .)
    SET_KNOBS       reduce using rule 4 (statement -> POP .)
    SPHERE          reduce using rule 4 (statement -> POP .)
    TORUS           reduce using rule 4 (statement -> POP .)
    BOX             reduce using rule 4 (statement -> POP .)
    LINE            reduce using rule 4 (statement -> POP .)
    CIRCLE          reduce using rule 4 (statement -> POP .)
    BEZIER          reduce using rule 4 (statement -> POP .)
    HERMITE         reduce using rule 4 (statement -> POP .)
    BASENAME        reduce using rule 4 (statement -> POP .)
    FRAMES          reduce using rule 4 (statement -> POP .)
    VARY            reduce using rule 4 (statement -> POP .)
    MOVE            reduce using rule 4 (statement -> POP .)
    SCALE           reduce using rule 4 (statement -> POP .)
    ROTATE          reduce using rule 4 (statement -> POP .)
    $end            reduce using rule 4 (statement -> POP .)


state 13

    (13) statement -> SET_KNOBS . NUMBER
    (40) NUMBER -> . DOUBLE
    (41) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 40

state 14
